--- a/package.json
+++ b/package.json
@@ -1,49 +1,1 @@
-{
-  "name": "NoStringsAttached",
-  "version": "0.1.0",
-  "description": "Cool Project",
-  "author": "Momos",
-  "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-preset-stage-3": "6.24.1",
-    "babel-register": "6.26.0",
-    "bootstrap": "4.3.1",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "chai-bignumber": "3.0.0",
-    "identicon.js": "^2.3.3",
-    "ipfs-api": "^26.1.2",
-    "ipfs-http-client": "^33.1.1",
-    "react": "16.8.4",
-    "react-audio-player": "^0.16.1",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
-  }
-}
+{"name":"NoStringsAttached","version":"0.1.0","description":"Cool Project","author":"Momos","dependencies":{"@material-ui/core":"^4.11.3","babel-polyfill":"6.26.0","babel-preset-env":"1.7.0","babel-preset-es2015":"6.24.1","babel-preset-stage-2":"6.24.1","babel-preset-stage-3":"6.24.1","babel-register":"6.26.0","bootstrap":"4.3.1","chai":"4.2.0","chai-as-promised":"7.1.1","chai-bignumber":"3.0.0","identicon.js":"^2.3.3","ipfs-api":"^26.1.2","ipfs-http-client":"^33.1.1","react":"^16.9.2","react-audio-player":"^0.16.1","react-bootstrap":"1.0.0-beta.5","react-dom":"16.8.4","react-scripts":"2.1.3","truffle":"5.0.5","web3":"1.0.0-beta.55"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject","predeploy":"npm run build","deploy":"gh-pages -d build"},"eslintConfig":{"extends":"react-app"},"browserslist":[">0.2%","not dead","not ie <= 11","not op_mini all"],"devDependencies":{"gh-pages":"^2.2.0"}}
